[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radclss"
version = "2026.3.6"
description = "Extracted Radar Columns and In Situ Sensors"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "rjackson" }, {name = "jrobrien91"}]
license = { text = "MIT" }
dependencies = [
    "arm_pyart",
    "numpy<=2.4.0",
    "xarray",
    "pandas",
    "xradar",
    "act-atmos",
    "matplotlib",
    "dask",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["radclss"]

[project.urls]
Homepage = "https://www.github.com/ARM-Development/radclss"
